--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -38,6 +38,15 @@
 {{ partial "svg" . }}
 
 <script src="/app.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133902373-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133902373-1');
+</script>
 
 </body>
 
