--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -6,6 +6,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+<META NAME="Title" CONTENT="Now open at Hops & Grain Brewery in Austin, Tx. | Foodmonger Austin">
+<META NAME="Keywords" CONTENT="Austin Texas Food Truck Hops and Grains Brewery">
+<META NAME="Description" CONTENT="Austin Texas Food Truck Hops and Grains Brewery">
+<META NAME="Subject" CONTENT="food beer austin">
+<META NAME="Robots" CONTENT="INDEX,FOLLOW">
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
