--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,11 +7,11 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-		<li><a href="/truck" class="pa3 no-underline db">Food Truck</a></li>
+		<li><a href="/truck" class="pa3 no-underline db">Truck Menu</a></li>
 
-		<li><a href="/catering" class="pa3 no-underline db">Catering</a></li>
+		<li><a href="/catering" class="pa3 no-underline db">Catering Menu</a></li>
 
-		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
+		<li><a href="/contact" class="pa3 no-underline db">Contact Us!</a></li>
 	</ul>
 
 </nav>
