--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -25,8 +25,8 @@
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
+					{{ partial "social-icon" (dict "link" "https://www.facebook.com/thefoodmongeratx/" "svg" "icons-facebook") }}
+					{{ partial "social-icon" (dict "link" "https://www.instagram.com/foodmongeratx/" "svg" "icons-instagram") }}
 				</ul>
 			</div>
 
