--- a/site/layouts/partials/menu_list.html
+++ b/site/layouts/partials/menu_list.html
@@ -5,9 +5,9 @@
 
 		<div class="flex-ns flex-wrap mhn2-ns mb3">
 			{{ range .blurbs }}
-				<div class="ph2-ns w-50-ns mb4">
-					<img src="{{ .image }}" alt="" class="center db mb3" style="width: 240px">
-					<p>{{ .text }}</p>
+				<div class="item4 grid-container ph2-ns w-50-ns mb4">
+					<img src="{{ .image }}" alt="" class="center db mb3" style="width: 130px">
+					<p class="item3">{{ .text }}</p>
 				</div>
 			{{ end }}
 		</div>
