--- a/site/layouts/section/catering.html
+++ b/site/layouts/section/catering.html
@@ -3,7 +3,7 @@
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
 
-{{ partial "menu_list" .Params.intro }}
+{{ partial "takeoutmenu" .Params.intro }}
 
 
 {{ with .Params.main }}
