--- a/site/layouts/section/truck.html
+++ b/site/layouts/section/truck.html
@@ -2,26 +2,11 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-
 {{ partial "menu_list" .Params.intro }}
 
-{{ with .Params.main }}
-<div class="center mb3 ph3">
-    <blockquote class="bg-grey-1 primary pa3 mb3 br1 b mw6 center">
-      <p class="f4 mb0">{{ .heading }}</p>
-      <cite class="tr db grey-3">{{ .description }}</cite>
-      <cite class="tr db grey-3">{{ .upgrade }}</cite>
-      <cite class="tr db red">*{{ .note }}</cite>
-    
-    </blockquote>
-  </div>
-  
-
-
+{{ partial "menublurb" .Params.main }}
 
 <!-- Image grid -->
-{{ partial "image-grid" . }}
-{{ end }}
 
 <div class="pb4">
   {{ range .Params.testimonials }}
