--- a/site/layouts/section/catering.html
+++ b/site/layouts/section/catering.html
@@ -2,24 +2,12 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
+{{ partial "menublurb" .Params.intro }}
 
 {{ partial "takeoutmenu" .Params.intro }}
 
 
 {{ with .Params.main }}
-<div class="center mb3 ph3">
-    <blockquote class="bg-grey-1 primary pa3 mb3 br1 b mw6 center">
-      <p class="f4 mb0">{{ .heading }}</p>
-      <cite class="tr db grey-3">{{ .description }}</cite>
-      <cite class="tr db grey-3">{{ .upgrade }}</cite>
-      <cite class="tr db red">*{{ .note }}</cite>
-    
-    </blockquote>
-  </div>
-  
-
-
-
 <!-- Image grid -->
 {{ partial "image-grid" . }}
 {{ end }}
