--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -28,6 +28,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
 	<link rel="manifest" href="/manifest.json">
+	<link rel="canonical" href="{{ config.extra.live_base_url }}{{ current_path }}">
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/img/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">	<!-- Favicons -->
