--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -13,7 +13,7 @@
 <META NAME="Robots" CONTENT="INDEX,FOLLOW">
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
-
+	<link rel="canonical" href="{{ .Permalink }}">
 	<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
