--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -2,7 +2,7 @@
 
 	<title>{{ .Title }} | Foodmonger Austin</title>
 	<link rel="stylesheet" href="/css/main.css" />
-
+<meta name="google-site-verification" content="T_lSpifRRu8N-vZ--zpduXB8YCrZSHJI7M2fySTbhMc" />
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
