--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -11,6 +11,8 @@
 <META NAME="Description" CONTENT="Austin Texas Food Truck Hops and Grains Brewery">
 <META NAME="Subject" CONTENT="food beer austin">
 <META NAME="Robots" CONTENT="INDEX,FOLLOW">
+	
+<META NAME="Description" CONTENT="{{ .Title }} | Foodmonger Austin | {{ .Description }}">
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 	<link rel="canonical" href="{{ .Permalink }}">
