--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -11,8 +11,7 @@
 <META NAME="Subject" CONTENT="food beer austin">
 <META NAME="Robots" CONTENT="INDEX,FOLLOW">	
 <META NAME="Description" CONTENT="{{ .Title }} | Foodmonger Austin | {{ .Description }}">
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
-	<link rel="canonical" href="{{ .Permalink }}">
+	<link rel="canonical" href="https://www.thefoodmongeratx.com">
 	<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
