--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -10,7 +10,6 @@
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/truck" class="link">Food Truck</a></li>
 					<li><a href="/catering" class="link">Catering</a></li>
-					<li><a href="/post" class="link">Specials</a></li>
 					<li><a href="/contact" class="link">Contact</a></li>
 				</ul>
 			</div>
@@ -18,7 +17,7 @@
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
+					<li><a href="/contact" class="link">Schedule an appointment</a></li>
 				</ul>
 			</div>
 
@@ -44,7 +43,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-133902373-1');
 </script>
 
