--- a/site/layouts/section/contact.html
+++ b/site/layouts/section/contact.html
@@ -7,15 +7,14 @@
 
 		{{ .Content }}
 
-		<div class="flex-ns mb3">
+		
 	        	{{ range .Params.contact_entries }}
-				<div>
+				
 					<h4 class="f4 b lh-title mb2 primary">{{ .heading }}</h4>
-					<p>{{ .text }}</p>
-				</div>
+					<h3>{{ .text }}</h3>
+					
 			{{ end }}
-		</div>
-
+			<hr>
 		{{ partial "contact-form" . }}
 
 	</div>
