--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <META NAME="Title" CONTENT="Now open at Hops & Grain Brewery in Austin, Tx. | Foodmonger Austin">
-<META NAME="Keywords" CONTENT="Austin Texas Food Truck Hops and Grains Brewery">
-<META NAME="Subject" CONTENT="food beer austin">
+<META NAME="Keywords" CONTENT="Austin Texas Food Monger Foodmonger Truck Hops and Grains Brewery">
+<META NAME="Subject" CONTENT="food beer austin Foodmonger hops and grains food truck">
 <META NAME="Robots" CONTENT="INDEX,FOLLOW">	
 <META NAME="Description" CONTENT="{{ .Title }} | Foodmonger Austin | {{ .Description }}">
 	<link rel="canonical" href="https://thefoodmongeratx.com">
